--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,32 @@
 * {
     box-sizing: border-box;
   }
+  
 
-  body {
+  html, body {
     font-family: 'open sans', sans-serif;
     background-color: black;
-    margin: auto;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
     /* border: thin dashed purple; */
   }
   
   .container {
-    margin: 10%;
+    margin-top: 130px;
+    padding: 100px;
     display: flex;
-    flex-wrap: wrap;
+    flex-flow: wrap;
     flex-direction: row;
-    width: 80%;
-    max-height: 27rem;
-    /* border: 2px solid red; */
-  }
-
-  .attribution { 
-    display: flex;
-    justify-content: center;
-    font-size: 11px; 
-    color: #8b88a3;
-   }
-
-  .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    justify-content: space-around;
+    height: auto;
+    width: 100%;
+    /* border: thin solid red; */
   }
 
   .information {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    align-items: left;
     background-color: hsl(246, 38%, 16%);
     color: white;
     padding: 40px 0px 40px 80px;
@@ -51,7 +44,7 @@
     display: flex;
     width: 50%;
     height: inherit;
-    border: thin solid lime;
+    /* border: thin solid lime; */
   }
 
   .overlay {
@@ -91,24 +84,84 @@
     text-transform: uppercase;
     font-size: 12px;
     color: #8b88a3;
-    /* border: thin solid pink; */
     letter-spacing: 2px;
+    /* border: thin solid pink; */
   }
 
   .title {
     color: #8e4cb1;
   }
 
+  .attribution { 
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 20px;
+    font-size: 11px; 
+    color: #8b88a3;
+   }
+
+  .attribution a { 
+    color: hsl(228, 45%, 44%); 
+  }
+
+
   /* FOR MOBILE SCREENS */
 
-@media (max-width: 400px) {
-  .container {
+@media (max-width:600px) {
+    .container {
+        justify-content: center;
+        margin: 100px 0;
+        padding: 30px;
+    }
+  
+    .panel {
+    display: flex;
     flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    }
+
+    .information{
+        padding: 0;
+        order: 2;
+        border-radius: 0 0 10px 10px;
+    }
+
+    p {
+        width: 240px;
+    }
+
+    h1 {
+        justify-content: center;
+        width: 100%;
+        text-align: center;
+        /* border: thin dashed pink; */
+    }
+
+    .stats {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 400px;
+    }
+
+    .labels {
+        display: flex;
+        justify-content: center;
+    }
+  
+    .image {
+        background-image: url(../images/image-header-mobile.jpg);
+        height: 500px;
+        border-radius: 10px 10px 0 0;
 
   }
-  
-  .image {
-    height: 20rem;
+
+  .attribution {
+      display: none;
   }
   
 }
